--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,12 +18,12 @@
 
                 <div class="sc-login-input-group">
                     <label>Email</label>
-                    <input type="email" required>
+                    <input type="email" name="username" required>
                 </div>
 
                 <div class="sc-login-input-group">
                     <label>Password</label>
-                    <input type="password" required>
+                    <input type="password" name="passwors" required>
                 </div>
 
                 <button class="sc-login-btn">Login</button>
